windows/networking/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iis-2019
  labels:
    app: iis-2019
    service: iis-2019
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: iis-2019
