windows/networking/destinationrule.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: "windows"
spec:
  host: "*.windows.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
