windows/networking/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: windows-iis
spec:
  hosts:
  - "windows.34.95.53.73.xip.io"
  gateways:
  - istio-system/wc-gateway
  http:
  - route:
    - destination:
        host: iis-2019
        port:
          number: 80
    match:
    - uri:
        prefix: /
